# media-to-wiki-convertor

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.example.toml  pyproject.toml
.agents/backlog/: 2026-07-11-media-first-debt.md
.agents/plans/: 2026-07-10-course-first-vault-structure.md  2026-07-11-media-first-debt-cleanup.md
.agents/specs/: 2026-07-10-course-first-vault-structure-design.md
.github/workflows/: test.yml
docs/: backlog.md
docs/superpowers/plans/: 2026-06-30-larchenko-kb-pipeline.md  2026-07-01-media-to-wiki-convertor-cli-implementation.md  2026-07-01-video-kb-cli-implementation.md
docs/superpowers/specs/: 2026-06-30-media-to-wiki-convertor-cli-design.md  2026-06-30-video-kb-cli-design.md
larchenko_kb/: __main__.py  article_plan.py  audio.py  chunks.py  cli.py  config.py  draft_articles.py  knowledge.py  manifest.py  topic_index.py  transcription.py  vault.py
media_to_wiki_convertor/: __init__.py  __main__.py  article_plan.py  artifacts.py  audio.py  catalog.py  chunks.py  cli.py  config.py  course_materials.py  course_plan.py  draft_articles.py  knowledge.py  labels.py  llm_clients.py  manifest.py  project.py  run_events.py  run_pipeline.py  topic_index.py  transcription.py  vault.py
tests/: test_article_plan.py  test_artifacts.py  test_audio.py  test_catalog.py  test_chunks.py  test_cli.py  test_config.py  test_course_materials.py  test_course_plan.py  test_draft_articles.py  test_knowledge.py  test_llm_clients.py  test_manifest.py  test_metadata.py  test_project.py  test_run_events.py  test_run_pipeline.py  test_topic_index.py  test_transcription.py  test_vault.py
video_kb/: __init__.py  __main__.py  article_plan.py  audio.py  chunks.py  cli.py  config.py  draft_articles.py  knowledge.py  project.py  run_pipeline.py  transcription.py  vault.py
