[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "video-kb"
version = "0.1.0"
description = "Local CLI for turning video folders into Obsidian knowledge bases."
requires-python = ">=3.11"
dependencies = ["numpy"]

[project.optional-dependencies]
mlx = ["mlx-whisper"]
dev = ["pytest", "ruff"]

[project.scripts]
video-kb = "video_kb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["video_kb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
