[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "media-to-wiki-convertor"
version = "0.1.0"
description = "Local CLI for turning video folders into Obsidian knowledge bases."
requires-python = ">=3.11"
dependencies = ["numpy"]

[project.optional-dependencies]
mlx = ["mlx-whisper"]
dev = ["pytest", "ruff"]

[project.scripts]
media-to-wiki-convertor = "media_to_wiki_convertor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["media_to_wiki_convertor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
